--- a/Join/View/FindIdeas/BigImageCell.xib
+++ b/Join/View/FindIdeas/BigImageCell.xib
@@ -11,20 +11,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BigImageCell" customModule="Join" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ufq-gJ-bVY">
-                        <rect key="frame" x="16" y="20" width="288" height="140"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Ufq-gJ-bVY" secondAttribute="height" multiplier="16:9" id="TWc-Ts-EGg"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Ufq-gJ-bVY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="MVb-fp-OOY"/>
-                    <constraint firstAttribute="trailing" secondItem="Ufq-gJ-bVY" secondAttribute="trailing" constant="16" id="Nk9-tb-0rg"/>
-                    <constraint firstItem="Ufq-gJ-bVY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="RJG-D0-QHZ"/>
+                    <constraint firstItem="Ufq-gJ-bVY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="MVb-fp-OOY"/>
+                    <constraint firstAttribute="trailing" secondItem="Ufq-gJ-bVY" secondAttribute="trailing" id="Nk9-tb-0rg"/>
+                    <constraint firstItem="Ufq-gJ-bVY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="RJG-D0-QHZ"/>
                     <constraint firstAttribute="bottom" secondItem="Ufq-gJ-bVY" secondAttribute="bottom" constant="20" id="cvR-rn-wfg"/>
                 </constraints>
             </tableViewCellContentView>
