--- a/Join/View/FindIdeas/DetailTitleHeaderView.xib
+++ b/Join/View/FindIdeas/DetailTitleHeaderView.xib
@@ -4,7 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,71 +13,35 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailTitleHeaderView" customModule="Join" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DetailTitleHeaderView" customModule="Join" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JNQ-n9-Qu0">
-                    <rect key="frame" x="16" y="20" width="382" height="40"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="標題標題標題標題標題標題標題標題標題標題標題標題標題" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9D6-Sc-41M">
-                            <rect key="frame" x="0.0" y="0.0" width="298" height="40"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ELf-fS-mGR">
-                            <rect key="frame" x="318" y="6" width="64" height="28"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6LV-9T-bf4">
-                                    <rect key="frame" x="0.0" y="0.0" width="28" height="28"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="6LV-9T-bf4" secondAttribute="height" multiplier="1:1" id="msO-ns-eFy"/>
-                                        <constraint firstAttribute="width" constant="28" id="zar-ot-P65"/>
-                                    </constraints>
-                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal">
-                                        <imageReference key="image" image="link" catalog="system" symbolScale="large"/>
-                                    </state>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vq8-X1-Bf9">
-                                    <rect key="frame" x="36" y="0.0" width="28" height="28"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="28" id="dwC-jh-DQl"/>
-                                        <constraint firstAttribute="width" secondItem="Vq8-X1-Bf9" secondAttribute="height" multiplier="1:1" id="ils-cu-d9X"/>
-                                    </constraints>
-                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal">
-                                        <imageReference key="image" image="bookmark" catalog="system" symbolScale="large"/>
-                                    </state>
-                                </button>
-                            </subviews>
-                            <constraints>
-                                <constraint firstItem="6LV-9T-bf4" firstAttribute="width" secondItem="6LV-9T-bf4" secondAttribute="height" multiplier="1:1" id="9VC-ue-2I9"/>
-                            </constraints>
-                        </stackView>
-                    </subviews>
-                </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9D6-Sc-41M">
+                    <rect key="frame" x="16" y="12" width="382" height="40"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                    <color key="textColor" name="Blue1"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="JNQ-n9-Qu0" secondAttribute="bottom" constant="20" id="DSZ-gT-eFb"/>
-                <constraint firstItem="JNQ-n9-Qu0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="bXb-Zp-P5i"/>
-                <constraint firstItem="JNQ-n9-Qu0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="wu6-QC-pVT"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="JNQ-n9-Qu0" secondAttribute="trailing" constant="16" id="zpo-L4-jl6"/>
+                <constraint firstItem="9D6-Sc-41M" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="FNn-vr-HhG"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="9D6-Sc-41M" secondAttribute="bottom" constant="8" id="GwZ-bm-aOe"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="9D6-Sc-41M" secondAttribute="trailing" constant="16" id="N7d-iT-STP"/>
+                <constraint firstItem="9D6-Sc-41M" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="le4-aS-7Qr"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="bookMarkButton" destination="Vq8-X1-Bf9" id="5Vq-ol-OWu"/>
-                <outlet property="shareLinkButton" destination="6LV-9T-bf4" id="ZVE-6D-oho"/>
                 <outlet property="titleLabel" destination="9D6-Sc-41M" id="91s-3j-1Xa"/>
             </connections>
             <point key="canvasLocation" x="140.57971014492756" y="81.696428571428569"/>
         </view>
     </objects>
     <resources>
-        <image name="bookmark" catalog="system" width="112" height="128"/>
-        <image name="link" catalog="system" width="128" height="122"/>
+        <namedColor name="Blue1">
+            <color red="0.0" green="0.22352941176470589" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
