feat: my projects details UI and show applicants section

--- a/Join/View/FindIdeas/ContactCell.xib
+++ b/Join/View/FindIdeas/ContactCell.xib
@@ -33,7 +33,7 @@
                                             <constraint firstAttribute="width" constant="43" id="XHB-po-9nH"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Za-l2-8Yg">
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Za-l2-8Yg">
                                         <rect key="frame" x="51" y="0.0" width="48" height="43"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Name">
