--- a/Join/View/Chat/GroupMessageCell.xib
+++ b/Join/View/Chat/GroupMessageCell.xib
@@ -53,10 +53,18 @@
                             <constraint firstItem="3cI-ix-Yfa" firstAttribute="top" secondItem="ec5-82-YBq" secondAttribute="top" id="LyG-t7-VbW"/>
                         </constraints>
                     </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24:59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mWp-9s-dfU">
+                        <rect key="frame" x="254" y="83.5" width="34" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" name="Gray3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="ec5-82-YBq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="8mW-By-GZK"/>
                     <constraint firstAttribute="bottom" secondItem="ec5-82-YBq" secondAttribute="bottom" constant="2" id="IPf-zZ-eyq"/>
+                    <constraint firstAttribute="bottom" secondItem="mWp-9s-dfU" secondAttribute="bottom" constant="2" id="V03-jR-u80"/>
+                    <constraint firstItem="mWp-9s-dfU" firstAttribute="leading" secondItem="ec5-82-YBq" secondAttribute="trailing" constant="2" id="ZCN-VE-qLo"/>
                     <constraint firstItem="ec5-82-YBq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="fqz-gj-XgA"/>
                     <constraint firstItem="ec5-82-YBq" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.75" id="lj7-RW-rv6"/>
                 </constraints>
@@ -66,6 +74,7 @@
                 <outlet property="messageTextView" destination="xA3-HS-pAb" id="vVM-k1-j42"/>
                 <outlet property="senderNameLabel" destination="Rjc-vK-bgO" id="evn-wW-Oid"/>
                 <outlet property="senderThumbnailImageView" destination="Sh2-Na-p0Q" id="bcs-r1-kuJ"/>
+                <outlet property="timeLabel" destination="mWp-9s-dfU" id="VHd-5n-aA2"/>
             </connections>
             <point key="canvasLocation" x="139" y="95"/>
         </tableViewCell>
@@ -77,8 +86,11 @@
         <namedColor name="Gray1">
             <color red="0.24705882352941178" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="Gray3">
+            <color red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Gray4">
-            <color red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
