--- a/Join/View/Chat/MessageCell.xib
+++ b/Join/View/Chat/MessageCell.xib
@@ -42,11 +42,19 @@
                             <constraint firstAttribute="bottom" secondItem="esc-zN-3iC" secondAttribute="bottom" id="YXg-qI-iWG"/>
                         </constraints>
                     </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="24:59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tCd-pG-nsU">
+                        <rect key="frame" x="255" y="43.5" width="34" height="15"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" name="Gray3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="rqP-qy-Irv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="09t-ax-9Hz"/>
+                    <constraint firstItem="tCd-pG-nsU" firstAttribute="leading" secondItem="rqP-qy-Irv" secondAttribute="trailing" constant="4" id="5EQ-QP-WIZ"/>
                     <constraint firstItem="rqP-qy-Irv" firstAttribute="width" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.75" id="6zi-rJ-6w9"/>
                     <constraint firstAttribute="bottom" secondItem="rqP-qy-Irv" secondAttribute="bottom" constant="2" id="9cN-oL-pSn"/>
+                    <constraint firstAttribute="bottom" secondItem="tCd-pG-nsU" secondAttribute="bottom" constant="2" id="cd5-Vb-6RS"/>
                     <constraint firstItem="rqP-qy-Irv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="iVj-S3-IbL"/>
                 </constraints>
             </tableViewCellContentView>
@@ -54,6 +62,7 @@
             <connections>
                 <outlet property="messageTextView" destination="esc-zN-3iC" id="fgG-43-hPQ"/>
                 <outlet property="thumbnailImageView" destination="mec-AQ-BWR" id="Ckh-KP-U3E"/>
+                <outlet property="timeLabel" destination="tCd-pG-nsU" id="WqX-5f-gSv"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="81.696428571428569"/>
         </tableViewCell>
@@ -62,8 +71,11 @@
         <namedColor name="Gray1">
             <color red="0.24705882352941178" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="Gray3">
+            <color red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Gray4">
-            <color red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
