--- a/Join/View/Chat/GroupCreationHeaderCell.xib
+++ b/Join/View/Chat/GroupCreationHeaderCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,6 +20,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UYX-uP-wai">
                         <rect key="frame" x="16" y="21" width="90" height="87.5"/>
+                        <color key="tintColor" name="Black4"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="UYX-uP-wai" secondAttribute="height" multiplier="1:1" id="481-Up-70r"/>
                             <constraint firstAttribute="width" constant="90" id="BbE-Kt-plT"/>
@@ -51,5 +53,8 @@
     </objects>
     <resources>
         <image name="photo" catalog="system" width="128" height="93"/>
+        <namedColor name="Black4">
+            <color red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
