--- a/Join/View/FindIdeas/IdeaCell.xib
+++ b/Join/View/FindIdeas/IdeaCell.xib
@@ -19,8 +19,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="190"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5U-t7-mMv">
-                        <rect key="frame" x="16" y="20" width="39" height="23"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5U-t7-mMv">
+                        <rect key="frame" x="16" y="20" width="313" height="23"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                         <color key="textColor" name="Blue1"/>
                         <nil key="highlightedColor"/>
@@ -129,15 +129,15 @@
                             </imageView>
                         </subviews>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUD-oX-wSo">
-                        <rect key="frame" x="353" y="20" width="45" height="20"/>
+                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUD-oX-wSo">
+                        <rect key="frame" x="345" y="20" width="53" height="20"/>
                         <color key="backgroundColor" name="Red"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Ft3-hE-osS"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="c6n-F1-wLk"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                        <inset key="contentEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
+                        <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="999+"/>
                     </button>
@@ -149,6 +149,7 @@
                 <constraint firstAttribute="trailing" secondItem="tib-H7-9w9" secondAttribute="trailing" constant="16" id="TZq-f0-HXg"/>
                 <constraint firstItem="eIn-ZT-RoF" firstAttribute="top" secondItem="f5U-t7-mMv" secondAttribute="bottom" constant="8" id="Viw-cm-INI"/>
                 <constraint firstItem="eIn-ZT-RoF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="csc-yc-rp0"/>
+                <constraint firstItem="FUD-oX-wSo" firstAttribute="leading" secondItem="f5U-t7-mMv" secondAttribute="trailing" constant="16" id="fFV-bH-YI6"/>
                 <constraint firstItem="FUD-oX-wSo" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="hRR-0N-gK1"/>
                 <constraint firstItem="f5U-t7-mMv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="mSy-0s-qQG"/>
                 <constraint firstItem="tib-H7-9w9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="tyZ-tb-XgW"/>
