--- a/Join/View/Form/GoSelectionCell.xib
+++ b/Join/View/Form/GoSelectionCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k54-CI-UHK">
-                        <rect key="frame" x="20" y="16" width="280" height="40"/>
+                        <rect key="frame" x="26" y="36" width="268" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="9ab-l8-hSI"/>
                         </constraints>
@@ -28,8 +29,8 @@
                             <action selector="buttonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DG7-u7-HVH"/>
                         </connections>
                     </button>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="La2-33-idV">
-                        <rect key="frame" x="276" y="26.5" width="20" height="19"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_24px_RightTriangle_Blue" translatesAutoresizingMaskIntoConstraints="NO" id="La2-33-idV">
+                        <rect key="frame" x="259" y="46" width="20" height="20"/>
                         <color key="tintColor" systemColor="tintColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="37r-2k-EEs"/>
@@ -37,7 +38,7 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vTm-fj-SMZ">
-                        <rect key="frame" x="24" y="26" width="43" height="20.5"/>
+                        <rect key="frame" x="41" y="46" width="43" height="20.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yqg-Ml-Vg5">
                                 <rect key="frame" x="0.0" y="0.0" width="35" height="20.5"/>
@@ -48,37 +49,37 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YcQ-lb-46V">
                                 <rect key="frame" x="35" y="0.0" width="8" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" systemColor="systemPinkColor"/>
+                                <color key="textColor" name="Red"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="k54-CI-UHK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Dza-CG-3Xt"/>
-                    <constraint firstAttribute="trailing" secondItem="k54-CI-UHK" secondAttribute="trailing" constant="20" id="MIa-8r-t4c"/>
+                    <constraint firstItem="k54-CI-UHK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="26" id="Dza-CG-3Xt"/>
+                    <constraint firstAttribute="trailing" secondItem="k54-CI-UHK" secondAttribute="trailing" constant="26" id="MIa-8r-t4c"/>
                     <constraint firstItem="vTm-fj-SMZ" firstAttribute="centerY" secondItem="k54-CI-UHK" secondAttribute="centerY" id="PzF-Uv-GJh"/>
                     <constraint firstItem="La2-33-idV" firstAttribute="centerY" secondItem="k54-CI-UHK" secondAttribute="centerY" id="QMf-1W-ZLs"/>
-                    <constraint firstItem="k54-CI-UHK" firstAttribute="trailing" secondItem="La2-33-idV" secondAttribute="trailing" constant="4" id="Vtv-sx-7Sx"/>
-                    <constraint firstItem="vTm-fj-SMZ" firstAttribute="leading" secondItem="k54-CI-UHK" secondAttribute="leading" constant="4" id="YH5-Ap-NrK"/>
-                    <constraint firstItem="k54-CI-UHK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="oWE-um-DMk"/>
+                    <constraint firstItem="k54-CI-UHK" firstAttribute="trailing" secondItem="La2-33-idV" secondAttribute="trailing" constant="15" id="Vtv-sx-7Sx"/>
+                    <constraint firstItem="vTm-fj-SMZ" firstAttribute="leading" secondItem="k54-CI-UHK" secondAttribute="leading" constant="15" id="YH5-Ap-NrK"/>
+                    <constraint firstItem="k54-CI-UHK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="36" id="oWE-um-DMk"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="button" destination="k54-CI-UHK" id="1Gy-xD-XeC"/>
-                <outlet property="chevronDownImageView" destination="k54-CI-UHK" id="bCH-Ni-8uf"/>
+                <outlet property="goNextPageImageView" destination="k54-CI-UHK" id="bCH-Ni-8uf"/>
                 <outlet property="mustFillSignLabel" destination="YcQ-lb-46V" id="gCJ-Ks-3MG"/>
-                <outlet property="titleLable" destination="Yqg-Ml-Vg5" id="V7H-zy-96v"/>
+                <outlet property="titleLabel" destination="Yqg-Ml-Vg5" id="V7H-zy-96v"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="68.303571428571431"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="chevron.down.circle" catalog="system" width="128" height="121"/>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="Icons_24px_RightTriangle_Blue" width="24" height="24"/>
+        <namedColor name="Red">
+            <color red="0.81999999284744263" green="0.28600001335144043" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
