--- a/Join/View/Personal/Profile/Edit/Portfolio/WorkRecordCell.xib
+++ b/Join/View/Personal/Profile/Edit/Portfolio/WorkRecordCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,8 +16,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A7Q-HW-8Cc">
-                        <rect key="frame" x="284" y="89" width="20" height="22"/>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A7Q-HW-8Cc">
+                        <rect key="frame" x="274" y="89" width="20" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="cpN-Ga-7cJ"/>
                             <constraint firstAttribute="width" secondItem="A7Q-HW-8Cc" secondAttribute="height" multiplier="10:11" id="zvv-SA-JLt"/>
@@ -27,18 +26,18 @@
                         <state key="normal" image="trash" catalog="system"/>
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zCR-1B-Ybc">
-                        <rect key="frame" x="16" y="23.5" width="260" height="153"/>
+                        <rect key="frame" x="26" y="9" width="240" height="182"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="153" id="Gs9-sk-Mxg"/>
+                            <constraint firstAttribute="width" secondItem="zCR-1B-Ybc" secondAttribute="height" multiplier="250:190" id="zyM-Rb-vJB"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="A7Q-HW-8Cc" firstAttribute="centerY" secondItem="zCR-1B-Ybc" secondAttribute="centerY" id="04P-W7-CfR"/>
-                    <constraint firstItem="zCR-1B-Ybc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ag5-f2-CgC"/>
+                    <constraint firstItem="A7Q-HW-8Cc" firstAttribute="centerY" secondItem="zCR-1B-Ybc" secondAttribute="centerY" id="5il-FS-dDp"/>
+                    <constraint firstAttribute="trailing" secondItem="A7Q-HW-8Cc" secondAttribute="trailing" constant="26" id="8vv-gZ-dND"/>
+                    <constraint firstItem="zCR-1B-Ybc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="26" id="ag5-f2-CgC"/>
                     <constraint firstItem="zCR-1B-Ybc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="nJs-6Y-iha"/>
-                    <constraint firstItem="zCR-1B-Ybc" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.8125" id="xV1-fn-ADi"/>
-                    <constraint firstItem="A7Q-HW-8Cc" firstAttribute="leading" secondItem="zCR-1B-Ybc" secondAttribute="trailing" constant="8" id="yHe-0f-kiB"/>
+                    <constraint firstItem="A7Q-HW-8Cc" firstAttribute="leading" secondItem="zCR-1B-Ybc" secondAttribute="trailing" constant="8" id="zR3-Al-pxZ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
