feat: reauthentication before delete account

--- a/Join/View/Base.lproj/Main.storyboard
+++ b/Join/View/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="A9e-Bt-MQk"/>
+        <segue reference="Wum-Uz-8pD"/>
     </inferredMetricsTieBreakers>
     <resources>
         <namedColor name="Blue1">
